--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "rn-shop-supbase",
-    "slug": "rn-shop-supbase",
+    "name": "rn-shop-supabase",
+    "slug": "rn-shop-supabase",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
