--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "rn-shop-supabase",
+    "scheme": "rn-shop-supabase",
     "slug": "rn-shop-supabase",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -23,6 +24,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": ["expo-router"]
   }
 }
