EAS Setup and Notification Setup and Testing Push NOtification Notification on a Real Device

--- a/app.json
+++ b/app.json
@@ -28,6 +28,14 @@
     "plugins": [
       "expo-router",
       "expo-secure-store"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "d1c84ede-d5f1-4466-b909-ae81825d44a3"
+      }
+    }
   }
 }
