--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "aes-js": "^3.1.2",
     "date-fns": "4.1.0",
     "expo": "~52.0.36",
-    "expo-constants": "~17.0.4",
+    "expo-constants": "~17.0.8",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
@@ -31,7 +31,9 @@
     "react-native-toast-notifications": "^3.4.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3",
-    "@stripe/stripe-react-native": "0.38.6"
+    "@stripe/stripe-react-native": "0.38.6",
+    "expo-notifications": "~0.29.14",
+    "expo-device": "~7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
